--- a/src/Preloader.css
+++ b/src/Preloader.css
@@ -1,7 +1,8 @@
 .preload {
+   position: absolute;top: 50%; left: 50%;
     width: 8vmax;
     height: 8vmax;
-    border-right: 4px solid #ffffff;
+    border-right: 4px solid black;
     border-radius: 100%;
     animation: spinRight 800ms linear infinite;}
     
@@ -13,7 +14,7 @@
       position: absolute;
       top: calc(50% - 3vmax);
       left: calc(50% - 3vmax);
-      border-left: 3px solid #ffffff;
+      border-left: 3px solid black;
       border-radius: 100%;
       animation: spinLeft 800ms linear infinite;
     }
@@ -24,7 +25,7 @@
       top: calc(50% - 2vmax);
       left: calc(50% - 2vmax);
       border: 0;
-      border-right: 2px solid #ffffff;
+      border-right: 2px solid black;
       animation: none;
     }
   
